--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "andy-idkit": "^1.4.4",
+    "andy-idkit-standalone": "^1.5.0",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
