--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@worldcoin/minikit-js": "^1.7.1",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
