--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@worldcoin/minikit-js": "^1.7.1",
+    "ethers": "^6.13.5",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
